--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,4 @@ jobs:
           python -m poetry install
       - name: Test with pytest
         run: |
-          pytest
+          python -m pytest
