--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip poetry
-          python -m poetry install
+          python -m poetry install --with dev
       - name: Test with pytest
         run: |
           python -m pytest
