fix(ci): try another way to launch pytest

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,10 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.8
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
@@ -18,4 +17,4 @@ jobs:
           python -m poetry install --with dev
       - name: Test with pytest
         run: |
-          python -m pytest
+          python -m poetry run python -m pytest
